--- a/humanresource/templates/HR/member.html
+++ b/humanresource/templates/HR/member.html
@@ -59,10 +59,10 @@
             <td class="table-list_head-tr_td">나이(만)</td>
             <td class="table-list_head-tr_td">아이디</td>
             <td class="table-list_head-tr_td">
-              담당업무
-              <svg xmlns="http://www.w3.org/2000/svg" width="15" height="11.471" viewBox="0 0 15 11.471">
-                <path id="다각형_242" data-name="다각형 242" d="M6.663,1.28a1,1,0,0,1,1.674,0l5.651,8.643a1,1,0,0,1-.837,1.547H1.849a1,1,0,0,1-.837-1.547Z" transform="translate(15 11.471) rotate(180)"/>
-              </svg>
+              <div class="tdDisplay">
+                <span>담당업무</span>
+                <div class="option-order"></div>
+              </div>
             </td>
             <td class="table-list_head-tr_td">입사일</td>
             <td class="table-list_head-tr_td">휴대폰 번호</td>
