--- a/templates/base.html
+++ b/templates/base.html
@@ -100,6 +100,9 @@
                 <a href="{% url 'HR:member' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">직원관리</li>
                 </a>
+                <a href="{% url 'HR:salary' %}" class="sideMenuNav2Link">
+                  <li class="sideMenuNav2Menu">급여관리</li>
+                </a>
               </ul>
             </div>
           </div>
