--- a/static/css/humanresource/member.css
+++ b/static/css/humanresource/member.css
@@ -123,7 +123,7 @@
     background-color: white;
     border-radius: 0.3rem;
     font-size: 1.4rem;
-    background-color: #0069D9;
+    background-color: #4E5869;
     color: white;
     cursor: pointer;
     box-sizing: border-box;
@@ -134,7 +134,6 @@
     height: 2.8rem;
     padding: 0.4rem 1.6rem;
     background-color: white;
-    border: 0.1rem solid #ABABAB;
     border-radius: 0.3rem;
     font-size: 1.4rem;
     color: black;
@@ -143,24 +142,20 @@
     box-sizing: border-box;
 }
 
-/* .popup-area-box_btn:hover{
-    padding: 0.4rem 1.6rem;
-    border: 0.1rem solid black;
-} */
-
 .member-upload{
     margin-right: 0;
+    background-color: #107C41;
+    color: white;
 }
 
 .popup-area-box_btn_create{
     width: auto;
     height: 2.8rem;
     padding: 0.4rem 1.6rem;
-    background-color: white;
-    border: 0.1rem solid #ABABAB;
+    background-color: #61B4E5;
     border-radius: 0.3rem;
     font-size: 1.4rem;
-    color: #0069D9;
+    color: white;
     margin-right: 1.2rem;
     cursor: pointer;
     box-sizing: border-box;
@@ -224,12 +219,11 @@
     top: -5.8rem;
     right: 22.2rem;
     margin-right: 1rem;
-    color: #DC1E1E;
+    background-color: #ED5565;
+    color: white;
 }
-
 .member-delete:hover{
-    padding: 0.4rem 1.6rem;
-    border: 0.1rem solid #DC1E1E;
+    background-color: #DC1E1E;
 }
 
 .member-create:hover {
@@ -247,8 +241,8 @@
 
 thead .member-height {
     height: 4.4rem;
-    background-color: #FBFBFB;
-    color: #484848;
+    background-color: #4E5869;
+    color: white;
 }
 
 thead .member-height td{
@@ -334,6 +328,22 @@ tbody .member-height {
     cursor: pointer;
 }
 
+.tdDisplay{
+    display: flex;
+    align-items: center;
+}
+
+.option-order{
+    width: 0;
+    height: 0;
+    border-top: 1rem solid white;
+    border-right: 0.7rem solid transparent;
+    border-bottom: 1rem solid transparent;
+    border-left: 0.7rem solid transparent;
+    margin-top: 1rem;
+    margin-left: 0.8rem;
+}
+
 .pagenation-area {
     display: flex;
     justify-content: center;
@@ -373,7 +383,7 @@ tbody .member-height {
 }
 
 .thisPage{
-    color: #0069D9;
+    color: #61B4E5;
     font-weight: 700;
 }
 
